--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 3 assignment</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="module3.css/style.css">
 </head>
+
 <body>
-	<h1>Er der hul igennem?</h1>
+	<h1 class="pull-right">Er der hul igennem?</h1>
+
+
+	<script src="js/jquery-1.11.3.min.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/script.js"></script>
 </body>
 </html>
