The optional assignment.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 3 assignment</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="module3.css/bootstrap.min.css">
     <link rel="stylesheet" href="module3.css/style.css">
 </head>
 
 <body>
-	<h1 class="pull-right">Er der hul igennem?</h1>
+  <header>
+    <nav class="navbar navbar-default">
+	  <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+         <a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
+        </div>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <a href="#chicken"><li>Chicken</li></a>
+            <hr>
+            <a href="#beef"><li>Beef</li></a>
+            <hr>
+            <a href="#sushi"><li>Sushi</li></a>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+<!--********Main Content********-->
+  <h2 class="text-center" id="top">Our Menu</h2>
+
+  <div class="container-fluid">
+  	<div class="row">
+  		<div class="col-md-4 col-sm-6 col-xs-12">
+  			<div class="text">
+  				<h3 class="text-center" id="chicken">Chicken</h3>
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati.</p>
+  				<a href="#top"><p class="text-center">Back to Top</p></a>
+  			</div>
+  		</div>
+
+  		<div class="col-md-4 col-sm-6 col-xs-12">
+  			<div class="text">
+  				<h3 class="text-center" id="beef">Beef</h3>
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati.</p>
+  				<a href="#top" class="text-center"><p class="text-center">Back to Top</p></a>
+  			</div>	
+  		</div>
+  		
+  		<div class="col-md-4 col-sm-12 col-xs-12">
+  			<div class="text">
+  				<h3 class="text-center" id="sushi">Sushi</h3>
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati.</p>
+  				<a href="#top" class="text-center"><p class="text-center">Back to Top</p></a>
+  			</div>	
+  		</div>		
+  		</div>
+  	</div>
+  </div>
 
 
 	<script src="js/jquery-1.11.3.min.js"></script>
